kubernetes/apps/security/authentik/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.nerdz.cloud/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames: ["sso.${SECRET_OG_DOMAIN}"]
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
